--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,6 +13,7 @@
     "react-router": "^6.1.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "reselect": "^4.1.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
